--- a/index.html
+++ b/index.html
@@ -1,41 +1,64 @@
 <head>
-    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-    <link rel="icon" type="image/x-icon" href="assets/img/icon.png" />  
-      <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+  <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+  <link rel="icon" type="image/x-icon" href="assets/img/icon.png" />
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
 
-<script type="text/javascript">
-    (function(c,l,a,r,i,t,y){
-        c[a]=c[a]||function(){(c[a].q=c[a].q||[]).push(arguments)};
-        t=l.createElement(r);t.async=1;t.src="https://www.clarity.ms/tag/"+i;
-        y=l.getElementsByTagName(r)[0];y.parentNode.insertBefore(t,y);
+  <script type="text/javascript">
+    (function(c, l, a, r, i, t, y) {
+      c[a] = c[a] || function() {
+        (c[a].q = c[a].q || []).push(arguments)
+      };
+      t = l.createElement(r);
+      t.async = 1;
+      t.src = "https://www.clarity.ms/tag/" + i;
+      y = l.getElementsByTagName(r)[0];
+      y.parentNode.insertBefore(t, y);
     })(window, document, "clarity", "script", "6bfr10wjn3");
-</script> 
+  </script>
 </head>
-
-
-
-
-
 
 <body id="page-top">
 
 
-    <br>
-    <br>
+  <br>
+  <br>
 
-    <br>
-    <br>
-    <h1 style="font-family:Arial;color: navy;text-transform: uppercase;display: block;margin-left: 300;text-align:left">Accenture</h1>
-
-
-
-    <br>
-    <h4 style="font-family:verdana;color: navy;text-transform: uppercase;display: block;margin-left: 300;text-align:left">Business Analysis</h4>
+  <br>
+  <br>
+  <h1 style="font-family:Arial;color: navy;text-transform: uppercase;display: block;margin-left: 100;text-align:left">Accenture</h1>
 
 
-    <p style="text-align: justify;
-  text-justify: inter-word;margin-top: 40px;font-family:Arial; margin-left: 300;margin-right: 300; font-size: 150%;" class="text-muted">This time i was playing a crucial role between the different stakeholders in software develepment, e.g. business decision makers, testing, development and devops teams. It was to take the coordination between all the stakegholders at next level, as it was relatively less of transferring of information between all of them, which unltimately bringing the entire project objectives down. </p>
-    <p style="text-align: justify;
-  text-justify: inter-word;margin-top: 20px;font-family:Arial; margin-left: 300;margin-right: 300; font-size: 150%;" class="text-muted">I implemented several techniques to bring the harmony between the teams. Started with brainstrorming with many crucial stakeholders and getting to know about them and their perscpective about the project. Circulated surveys and conducted interviews to grasp more about business objctive from everyones perspective. Then later, I sat down and executed a GAP analysis at my level and later continuous presentations and colloborations created a trust level among teams. We were able to make the impact and brought more harmony in team.</p>
+
+  <br>
+  <h4 style="font-family:verdana;color: navy;text-transform: uppercase;display: block;margin-left: 100;text-align:left">Business Analyst</h4>
+
+
+  <p style="text-align: justify;
+  text-justify: inter-word;margin-top: 40px;font-family:Arial; margin-left: 100;margin-right: 100; font-size: 150%;" class="text-muted">Created value to the client by reducing the <i>Defect in production</i> KPIs to the lowest. This I was able to achieve the KPI goal, because of the understanding of their business flows on my fingers. I had nice professional relationships with each stakeholders; I always make sure to read their mind regarding the business requirements , releases and their approach, which always helped me to avoid any conflict between them. With  regular presentations, interviews and brainstorming sessions with stakeholders assisted me to foresee the situtions and take action accordingly. </p>
+  <p style="text-align: justify;
+  text-justify: inter-word;margin-top: 20px;font-family:Arial; margin-left: 100;margin-right: 100; font-size: 150%;" class="text-muted">I implemented several techniques to bring the harmony between the teams. Started with brainstrorming with many crucial stakeholders and getting to know about them and their perscpective about the project. Circulated surveys and conducted interviews to grasp more about business objctive from everyones perspective. Then later, I sat down and executed a GAP analysis at my level and later continuous presentations and colloborations created a trust level among teams. We were able to make the impact and brought more harmony in team.</p>
+  <ul style="text-align: justify;
+    text-justify: inter-word;margin-top: 20px;font-family:Arial; margin-left: 100;margin-right: 100; font-size: 150%;" class="text-muted">
+    <li>SWOT, PESTLE & 100 $ technique</li>
+    <li>Analytical thinking and problem solving</li>
+    <li>Understanding of software testing & data analysis skills</li>
+    <li>Requirements engineering </li>
+    <li>Organizational skills</li>
+
+
+  </ul>
+
+  <p style="text-align: justify;
+  text-justify: inter-word;margin-top: 20px;font-family:Arial; margin-left: 100;margin-right: 100; font-size: 150%;" class="text-muted">
+
+  </p>
+
+  <p style="text-align: justify; color: lightblue;
+  text-justify: inter-word;margin-top: 20px;font-family:Arial; margin-left: 100;margin-right: 100; font-size: 150%;" class="text-muted"><i>#interpersonal #qualityassurance #jira #alm #stakeholdermanagement</i></p>
+
+
+  <div class="container" style="height: 150px;">
+
+  </div>
 
 </body>
