--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
   <br>
   <br>
-  <h1 style="font-family:Arial;color: navy;text-transform: uppercase;display: block;margin-left: 100;text-align:left">Accenture</h1>
+  <h1 style="font-family:Arial;color: navy;text-transform: uppercase;display: block;margin-left: 100;text-align:left">Tech Mahindra</h1>
 
 
 
